[SCB-2799]support instance ping logic